Extracting FitsImageDataSet from HSCDataSet (#283)
- Extracted FitsImageDataSet as a base class from HSCDataSet
- Added end-to-end tests of FitsImageDataSet, HSCDataSet, and HyraxCifarDataSet. Tests exercise train, infer, and umap verbs.
- These tests are not enabled in automated runs due to CPU/Mem/GPU constraints on GHA runners
- New Tests are disabled in pre-commit because they are slow
- Turning on docstring tests in the source tree generally, and fixing some collection issues
  on python 3.9
- Added error messages to FitsImageDataSet

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,7 @@ repos:
       - id: xcxc-check
         name: Check for note-to-self comments (xcxc)
         description: Grep all source files for xcxc which signifies a comment that shouldn't be checked in.
-        entry: bash -c "[[ $(grep -riI xcxc --exclude .pre-commit-config.yaml --exclude-dir _readthedocs --exclude-dir htmlcov ./* >&2 ; echo $?) == 1 ]]"
+        entry: bash -c "[[ $(grep -rniI xcxc --exclude .pre-commit-config.yaml --exclude-dir _readthedocs --exclude-dir htmlcov ./* >&2 ; echo $?) == 1 ]]"
         language: system
         pass_filenames: false
         always_run: true
@@ -105,7 +105,7 @@ repos:
       - id: pytest-check
         name: Run unit tests
         description: Run unit tests with pytest.
-        entry: bash -c "if python -m pytest --co -qq; then python -m pytest --cov=./src --cov-report=html; fi"
+        entry: bash -c "if python -m pytest --co -qq -m 'not slow'; then python -m pytest --cov=./src --cov-report=html -m 'not slow'; fi"
         language: system
         pass_filenames: false
         always_run: true
