WIP - Moving vectordb insertion to new verb.

--- a/src/hyrax/hyrax_default_config.toml
+++ b/src/hyrax/hyrax_default_config.toml
@@ -216,6 +216,12 @@ split = false
 # The type of vector db to use. Use "false" to disable vector database.
 name = "chromadb"
 
+# The directory where the vector database will be stored. Use "false" to create
+# a new vector database in a timestamped directory. Otherwise set to a path.
+vector_db_dir = false
+
+# The path to inference results. Use "false" to find the most inference results.
+infer_results_dir = false
 
 [results]
 # Path to inference results to use for visualization and lookups. Uses latest inference run if none provided.
