Adding column config to visualizer - Getting started steps should work now out of the box - You now must set config['visualize']['fields'] to a list of the   metadata fields you'd like the visualizer to use - End to end tests now also test the visualizer - Classes deriving from HyraxDataset who do not specify an   "object_id" column in their metadata will now have that column   pre-filled with the contents of their .ids() member. - Minor changes to HSCDataSet tests to enable end-to-end testing   since metadata is normally disabled on HSCDataSet for unit testing

--- a/src/hyrax/hyrax_default_config.toml
+++ b/src/hyrax/hyrax_default_config.toml
@@ -238,3 +238,8 @@ n_components = 2
 # Controls how UMAP balances local versus global structure in the data.
 # See official documentation for details.
 n_neighbors = 15
+
+[visualize]
+
+# List of metadata field names to use in visualizer. Must be available as metadata in your dataset
+fields = []
